# odrive_sdk

./: .gitignore  README.md
cpp_version/: CMakeLists.txt  README.md  odrive_test.cpp
cpp_version/config/: config.yaml
cpp_version/examples/: odrive_speed_test.cpp
cpp_version/include/: odrive_sdk.h
cpp_version/src/: odrive_sdk.cpp
python_version/: README.md  odrive_sdk.py  odrive_test.py
python_version/Examples/: custom_motor_pos_controller.py  custom_motor_speed_controller.py  custom_motor_torque_controller.py  pos_controller.py  speed_controller.py  torque_controller.py
python_version/odrive_sdk/: odrive_sdk.py  odrive_v53.py  odrive_v54.py  odrivepro.py
